# sandbox

./: .gitignore  PREC_REC.ipynb  Untitled.ipynb  pyproject.toml  sandbox.py  test.ipynb
00_small_utilities/bpress/: Blood Pressure Graphs.ipynb
00_small_utilities/bsky/: Graph.ipynb
00_small_utilities/drawings/: arrows.py
00_small_utilities/names/: #names.py#  entities.py  names.py
00_testing_libraries/02_jax_ecosystem/: Neural ODE.ipynb
00_testing_libraries/03_polars/: TEST1.ipynb
01_crawl_wikipedia/: test_prompts.jsonl
01_testing_libraries/02_jax_ecosystem/: diffeq.ipynb
01_testing_libraries/03_polars/: TEST2.ipynb
01_testing_libraries/04_pandas2/: Untitled.ipynb  pkgs.txt
02_crawl_wikipedia/: 01_GETTING_DATA copy.ipynb
03_gibbs_distributions/: 01_FUN_DISTRIBUTION.ipynb  02_EXPLORE_GIBBS_DISTRIBUTIONS.ipynb
03_math_curiosities/: 01_number_walls.py  09_composition.py
04_gbdt_implementation/: gbdt.py
05_information_imbalance/: Information Imbalance - Feature Selection 2.ipynb  Information Imbalance - Feature Selection.ipynb  Information Imbalance.ipynb  Lib Tewt.ipynb
06_number_walls/: wall.py
07_quantum_mechanics_sim/: 02_GENERATE_TRAINING_SET .ipynb  train.py
07_studying/python/struct/: pyproject.toml
07_studying/python/struct/data/: hashtable.csv  plot.ipynb
07_studying/python/struct/examples/: hashtable.py  p02.py  p03.py  p04.py
07_studying/python/struct/tests/: test_p04.py
08_quantum_mechanics_simulations/: 00_SANDBOX.ipynb  03_FIND_GROUND_STATE.ipynb  03_LGBM.ipynb  utils.py
09_typehints/: sandbox.ipynb  typeclasses.ipynb
(+254 files in other folders)
